--- a/Project_28Sep2018/Nhub/Nhub.csproj
+++ b/Project_28Sep2018/Nhub/Nhub.csproj
@@ -412,6 +412,12 @@
       <DependentUpon>Web.config</DependentUpon>
     </None>
   </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\DAL1\DAL.csproj">
+      <Project>{3d2eeb30-5033-48aa-8e06-42b3272b315d}</Project>
+      <Name>DAL</Name>
+    </ProjectReference>
+  </ItemGroup>
   <PropertyGroup>
     <VisualStudioVersion Condition="'$(VisualStudioVersion)' == ''">10.0</VisualStudioVersion>
     <VSToolsPath Condition="'$(VSToolsPath)' == ''">$(MSBuildExtensionsPath32)\Microsoft\VisualStudio\v$(VisualStudioVersion)</VSToolsPath>
