--- a/Project_28Sep2018/Nhub/bin/Nhub.dll.config
+++ b/Project_28Sep2018/Nhub/bin/Nhub.dll.config
@@ -11,7 +11,7 @@
       requirePermission="false"/>
   </configSections>
   <connectionStrings>
-    <add name="DefaultConnection" connectionString="Data Source=(LocalDb)\MSSQLLocalDB;AttachDbFilename=|DataDirectory|\aspnet-Nhub-20180928071343.mdf;Initial Catalog=aspnet-Nhub-20180928071343;Integrated Security=True"
+    <add name="DefaultConnection" connectionString="Data Source=ACUPC-109;Initial Catalog=NotificationHub;Integrated Security=True"
       providerName="System.Data.SqlClient" />
   </connectionStrings>
   <system.web>
