--- a/Project_28Sep2018/DAL1/DAL.csproj
+++ b/Project_28Sep2018/DAL1/DAL.csproj
@@ -43,9 +43,13 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Model\Channel.cs" />
+    <Compile Include="Model\Events.cs" />
+    <Compile Include="Model\Source.cs" />
     <Compile Include="Model\Templates.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Repository\ChannelRepository.cs" />
+    <Compile Include="Repository\EventRepository.cs" />
+    <Compile Include="Repository\SourceRepository.cs" />
     <Compile Include="Repository\TemplatesRepository.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
