--- a/Project_28Sep2018/DAL1/DAL1.csproj
+++ b/Project_28Sep2018/DAL1/DAL1.csproj
@@ -46,11 +46,13 @@
     <Compile Include="Model\Events.cs" />
     <Compile Include="Model\ServiceLine.cs" />
     <Compile Include="Model\Source.cs" />
+    <Compile Include="Model\TemplateEvent.cs" />
     <Compile Include="Model\Templates.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Repository\ChannelRepository.cs" />
     <Compile Include="Repository\EventRepository.cs" />
     <Compile Include="Repository\SourceRepository.cs" />
+    <Compile Include="Repository\TemplateEventRepository.cs" />
     <Compile Include="Repository\TemplatesRepository.cs" />
     <Compile Include="StaticValues.cs" />
   </ItemGroup>
